<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WillApp</string>
    <string name="howdy_stranger">Howdy, stranger!</string>
    <string name="action_settings">Settings</string>
    <string name="goa1">Clock &#038; Pic</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="button2">Activity 3!</string>
    
    <string name="act2">You\'re on Activity 2</string>
    <string name="gps">x,y</string>
    <string name="button3">Reversing Text!</string>
    <string name="editable"></string>
    <string name="title_activity_fifth">FifthActivity</string>
    <string name="button4">List View!</string>
    <string name="contactname">Dr. Steve Brule</string>
    

</resources>
